--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,41 @@
+buildscript {
+    repositories {
+        maven {url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+        mavenLocal()
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.6.RELEASE")
+    }
+}
 group 'cn.lewis'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
-
-sourceCompatibility = 1.8
+apply plugin: 'idea'
+apply plugin: 'org.springframework.boot'
 
 repositories {
     maven {url 'http://maven.aliyun.com/nexus/content/groups/public/'}
-    mavenLocal()
-    mavenCentral()
 }
 
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
+jar {
+    baseName = 'all-in'
+}
+
+
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile("org.springframework.boot:spring-boot-starter-web")
+    compile("org.springframework.boot:spring-boot-starter-actuator")
+    compile("org.springframework.boot:spring-boot-starter-aop")
+    compile("org.springframework:spring-context-support")
+    compile("org.springframework:spring-tx")
+    compile("org.springframework:spring-jdbc")
+    compile("org.springframework.boot:spring-boot-starter-thymeleaf")
+    compile("mysql:mysql-connector-java:5.1.36")
+    compile ("com.alibaba:fastjson:1.2.6")
+
 }
